--- a/index.html
+++ b/index.html
@@ -1,9 +1,38 @@
+<!DOCTYPE html>
 <html>
+<head>
+<meta charset="UTF-8">
 
-<body>
+<script src="angular.min.js"> </script>
+<script src="app.js"> </script>
 
-  <h1> Hello World! </h1>
+<title>Title of the document</title>
+</head>
+
+<body ng-app="LunchCheck">
+
+<h1> Name Calculator </h1>
+
+<div ng-controller = "LunchCheckController">
+
+	<div>
+
+	Your name:
+
+	<input type="text" ng-model="name">
+
+	</div>
+
+	<button ng-click="checkIfTooMuch()"> Check If Too Much  </button>
+	
+	
+	<div> {{message}}</div>
+
+	
+</div>
+
 
 </body>
+
 
 </html>
